2007-10-30  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10300.c (tc_gen_reloc): Fix test that decides when
	sym_diff relocs should be generated.
	(md_apply_fix): Skip R_MN10300_ALIGN relocs.
	(mn10300_fix_adjustable): Do not adjust R_MN10300_ALIGN relocs.
	(mn10300_handle_align): New function.  Generate R_MN10300_ALIGN
	relocs to record alignment requests.
	* config/tc-mn10300.h (TC_FORCE_RELOCATION_SUB_SAME): Also force
	R_MN10300_ALIGN relocs.
	(HANDLE_ALIGN): Define.  Call mn10300_handle_align.

2007-10-30  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Section): Replace "subsegment" with
	"subsection".

2007-10-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5221
	* config/obj-elf.c (obj_elf_section): Handle optional
	parameters for .pushsection.

	* doc/as.texinfo: Document optional parameters for
	.pushsection.

2007-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Move AM_PROG_LIBTOOL after AC_GNU_SOURCE.
	* configure: Regenerated.

2007-10-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (INCLUDES, DEP_INCLUDES): Remove -D_GNU_SOURCE.
	Run "make dep-am".
	* configure.in: Invoke AC_GNU_SOURCE.
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.

2007-10-19  Nick Clifton  <nickc@redhat.com>

	* expr.c (expr): Test md_allow_local_subtract (if defined) before
	allowing the evaluation of an expression involving two symbols
	defined in the same section.
	* doc/internals.texi (md_allow_local_subtract): Document the new
	macro.
	* config/tc-mn10300.h (md_allow_local_subtract): Define.
	(RELAX_EXPANSION_POSSIBLE): Define.
	(MAX_RELOC_EXPANSION): Define.
	(TC_FRAG_TYPE): Define.
	* config/tc-mn10300.c (md_assemble): Mark fragments as containing code.
	(tc_gen_reloc): Return an array of relocs.  If necessary generate
	two relocs to handle an expressions involving the difference of
	two symbols.
	(mn10300_fix_adjustable): Do not test TC_FORCE_RELOCATION_LOCAL
	when then fixup is not pc-relative.